[package]
name = "interp_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bezier-nd = "0.5.0"
geo-nd = "0.5.0"
# macroquad = { version = "0.4.4", features = ["audio"] }
macroquad = { version = "0.4.4" }

# https://doc.rust-lang.org/cargo/reference/profiles.html#overrides-and-generics
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.
panic = "abort"
